# power-hub

./: .env  .gitignore  README.md  configure-plc.py  configure_plc.py  docker-compose.yml  mqtt-bridge.docker-compose.yml  plc-docker-compose.Dockerfile  plc.docker-compose.yml  powerhub_simulation_schedules_Jun_Oct_TMY.csv  powerhub_simulation_schedules_data.parquet  pyproject.toml  python_control.Dockerfile  python_script.Dockerfile  read_mqtt.sh  simulation.Dockerfile  simulation.env  terraform.tfstate  write_setpoint.sh
analysis/: .gitignore  analysis_functions.py  control_graph.ipynb  csv_for_impact_report.ipynb  draw.ipynb  electric-consumption.ipynb  graphs_for_impact_report.ipynb  simulate_powerhub.html  simulate_powerhub.ipynb  yazaki-analysis.ipynb
app/: .env.production  .eslintrc.cjs  README.md  env.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.mts  vitest.config.ts
apps/: Dockerfile.dashboard  README.md  docker-compose.yaml  env.d.ts  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vitest.workspace.ts
docker/: bridge-telegraf.conf  mosquitto.conf  mosquitto.passwd  telegraf.conf
energy-report/: .gitignore  README.md  energy-report.ipynb
energy_box_control/: amqtt.py  check_alarms.py  checks.py  config.py  control.py  custom_logging.py  enrich_sensors.py  linearize.py  logging.conf  logic.py  monitoring.py  mqtt.py  network.py  networks.py  pid.py  power_hub.py  power_hub_control.py  schedules.py  sensors.py  simulation.py  simulation_json.py  time.py  units.py  yazaki.py
hmi_dashboard/: .env.production  .eslintrc.cjs  .gitignore  Dockerfile  docker-compose.yaml  index.html  package.json  pnpm-lock.yaml  tsconfig.vitest.json
icons/: README.md  model.scad  run.py
infra/: .gitignore  .terraform.lock.hcl  README.md  backend.tf  cert_manager.tf  cloudflare.tf  env_locals.tf  gar.tf  gke.tf  google_alerting.tf  google_iam.tf  helm.tf  influxdb.tf  influxdb.values.yaml  k8s.tf  openvpn.tf  openvpn.values.yaml  power_hub_api.tf  power_hub_api.values.yaml  power_hub_control.tf  power_hub_control.values.yaml  power_hub_mqtt_checker.tf  power_hub_mqtt_checker.values.yaml  power_hub_simulation.tf  power_hub_simulation.values.yaml  prod-backend.conf  staging-backend.conf  telegraf.tf  telegraf.values.yaml  terraform.tfstate.backup  terraform.tfvars  vernemq.tf  vernemq.values.yaml  versions.tf  vpc.tf
mqtt_bridge/: .env  Dockerfile  env.d.ts  (+6 more)
(+681 files in other folders)
